# pbv2

./: CMakeLists.txt  conanfile.txt  pbv.cmake  poc.cpp  tests.cmake
.cache/clangd/index/: Evaluable.hpp.07447FF96DC55BD4.idx  Null.cpp.03411400B44CF9F6.idx  Null.hpp.DEF82BC77536C292.idx  StaticTrace.hpp.676800B9FE2D8268.idx  TracesStore.hpp.1AADB3044D118B44.idx  ValidationResult.hpp.2ED961993D9248E5.idx
include/pbv/: AsyncSupport.hpp  Counting.hpp  Default.hpp  Dependence.hpp  Embbeded.hpp  Evaluable.hpp  Expression.hpp  Has.hpp  Null.hpp  Rules.hpp  Sets.hpp  StaticTrace.hpp  TracesStore.hpp  TypeTraits.hpp  ValidationResult.hpp  Validator.hpp
src/: AsyncSupport.cpp  Dependence.cpp  Rules.cpp  TracesStore.cpp
tests/: Embbeded.cpp  FakeProto.hpp  InSet.cpp  Null.cpp  Rules.cpp  poc.cpp
